lre-dev/endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-25T13:37:37Z"
    labels:
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      name: amq-broker-operator
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: amq-broker-operator
    namespace: lre-dev
    resourceVersion: "467404238"
    uid: 16f741ec-b6d1-43fa-909a-0dac3f8e90c8
  subsets:
  - addresses:
    - ip: 10.130.17.124
      nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
      targetRef:
        kind: Pod
        name: amq-broker-operator-78cbb94f44-52wwn
        namespace: lre-dev
        resourceVersion: "467404233"
        uid: 66f1857c-8991-4628-9718-f1720082cb34
    ports:
    - name: metrics
      port: 8383
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-25T13:37:37Z"
    labels:
      app: api-integracion
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: api-integracion
    namespace: lre-dev
    resourceVersion: "476624954"
    uid: 65206597-b6cd-4f8f-b2b1-e9a648dcadbd
  subsets:
  - addresses:
    - ip: 10.130.20.153
      nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
      targetRef:
        kind: Pod
        name: api-integracion-3-726v6
        namespace: lre-dev
        resourceVersion: "476624952"
        uid: f60f815e-585d-4514-a400-cfab0f9a11a2
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-25T13:37:37Z"
    labels:
      app: consumerampq
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: consumerampq
    namespace: lre-dev
    resourceVersion: "11409137"
    uid: e6086ec8-71ef-478b-8ab7-b4c85dd5988e
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-25T13:37:38Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: lre-broker-amqp-0-svc
    namespace: lre-dev
    resourceVersion: "11409144"
    uid: d73a9bae-150a-4c46-b84e-c7897dd81491
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-25T13:37:38Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: lre-broker-amqp-1-svc
    namespace: lre-dev
    resourceVersion: "11409146"
    uid: a12670ba-d6bb-4879-aeeb-14388bf7e8b8
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-25T13:37:38Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: lre-broker-hdls-svc
    namespace: lre-dev
    resourceVersion: "11409147"
    uid: 9c60fe35-3da4-45f0-87c8-7cdf7e16a608
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-25T13:37:38Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: lre-broker-ping-svc
    namespace: lre-dev
    resourceVersion: "11409148"
    uid: 7c7f8de1-54a8-4a23-8044-03b7d4cb2d7e
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-25T13:37:38Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: lre-broker-wconsj-0-svc
    namespace: lre-dev
    resourceVersion: "11409149"
    uid: 10e8cce6-8d20-4e16-9959-1def9c52ed9b
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-25T13:37:38Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: lre-broker-wconsj-1-svc
    namespace: lre-dev
    resourceVersion: "11409151"
    uid: cc732416-d375-4f1e-b259-0e2bc0cba224
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-25T13:37:38Z"
    labels:
      app.kubernetes.io/component: lre-design
      app.kubernetes.io/instance: lre-design
      app.kubernetes.io/name: nodejs
      app.openshift.io/runtime: nodejs
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      project: lre-design
      provider: nodeshift
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
      version: 0.1.0
    name: lre-design
    namespace: lre-dev
    resourceVersion: "11409153"
    uid: b2fde528-0df0-4a9c-9bfe-693e26521120
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-25T13:37:38Z"
    labels:
      app: lre-front
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: lre-front
    namespace: lre-dev
    resourceVersion: "472918001"
    uid: b0d8a318-9f24-4820-a0a3-bff3fc649006
  subsets:
  - addresses:
    - ip: 10.129.16.115
      nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth1-2s77x
      targetRef:
        kind: Pod
        name: lre-front-7-2thsq
        namespace: lre-dev
        resourceVersion: "472917997"
        uid: 44bab40b-530f-4135-9bbf-36ee85bed611
    ports:
    - name: 3000-tcp
      port: 3000
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-25T13:37:38Z"
    labels:
      app.kubernetes.io/component: lre-frontproject
      app.kubernetes.io/instance: lre-frontproject
      app.kubernetes.io/name: nodejs
      app.openshift.io/runtime: nodejs
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      project: lre-frontproject
      provider: nodeshift
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
      version: 0.1.0
    name: lre-frontproject
    namespace: lre-dev
    resourceVersion: "11409155"
    uid: a82c58c4-9536-48f0-826f-2b040c84eb3b
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-25T13:37:38Z"
    labels:
      app: product-lre
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: product-lre
    namespace: lre-dev
    resourceVersion: "467404302"
    uid: 6388eb62-52ca-4588-8a21-48549eef9d4d
  subsets:
  - addresses:
    - ip: 10.130.16.108
      nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
      targetRef:
        kind: Pod
        name: product-lre-1-78dll
        namespace: lre-dev
        resourceVersion: "467404301"
        uid: 60d491f1-a7db-43ee-bae2-7d07821f1c75
    ports:
    - name: 3000-tcp
      port: 3000
      protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
