lre-dev/endpointslices.discovery.k8s.io.yaml
apiVersion: v1
items:
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.17.124
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
    targetRef:
      kind: Pod
      name: amq-broker-operator-78cbb94f44-52wwn
      namespace: lre-dev
      resourceVersion: "467404233"
      uid: 66f1857c-8991-4628-9718-f1720082cb34
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-25T13:37:40Z"
    generateName: amq-broker-operator-
    generation: 48
    labels:
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: amq-broker-operator
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      name: amq-broker-operator
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: amq-broker-operator-52w85
    namespace: lre-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: amq-broker-operator
      uid: 78a4b928-1824-4b44-a1a8-ac0a4ef01b36
    resourceVersion: "467404236"
    uid: 136f4beb-5e26-4ec6-93d0-bb4aaf220ade
  ports:
  - name: metrics
    port: 8383
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.20.153
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-dev-brazilsouth1-vlxcp
    targetRef:
      kind: Pod
      name: api-integracion-3-726v6
      namespace: lre-dev
      resourceVersion: "476624952"
      uid: f60f815e-585d-4514-a400-cfab0f9a11a2
    zone: brazilsouth-1
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-25T13:37:40Z"
    generateName: api-integracion-
    generation: 40
    labels:
      app: api-integracion
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: api-integracion
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: api-integracion-5sg5n
    namespace: lre-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: api-integracion
      uid: 455ce4a9-99aa-4d41-9125-9548e769e404
    resourceVersion: "476624953"
    uid: 37e7f051-5265-4c1f-8c22-87b3b8ee81a9
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-25T13:37:40Z"
    generateName: consumerampq-
    generation: 1
    labels:
      app: consumerampq
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: consumerampq
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: consumerampq-r7cvc
    namespace: lre-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: consumerampq
      uid: c75b59e1-c6bf-466c-b32a-167240425853
    resourceVersion: "476054037"
    uid: 01ba5baf-1bcf-4f6e-97e0-395e1865240d
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-25T13:37:40Z"
    generateName: lre-broker-amqp-0-svc-
    generation: 1
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: lre-broker-amqp-0-svc
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: lre-broker-amqp-0-svc-hkj5c
    namespace: lre-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: lre-broker-amqp-0-svc
      uid: b7d0659f-5ce3-42b9-95e8-e3be352a1325
    resourceVersion: "476054067"
    uid: 9840436a-4b59-4b8e-8914-34d8d1f7d69e
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-25T13:37:40Z"
    generateName: lre-broker-amqp-1-svc-
    generation: 1
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: lre-broker-amqp-1-svc
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: lre-broker-amqp-1-svc-cffst
    namespace: lre-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: lre-broker-amqp-1-svc
      uid: 2d6f3408-7c77-44d2-913d-66c5af0995ec
    resourceVersion: "476054105"
    uid: f28d8dbd-ba49-4671-8585-8136360acf19
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-25T13:37:40Z"
    generateName: lre-broker-hdls-svc-
    generation: 1
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: lre-broker-hdls-svc
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      service.kubernetes.io/headless: ""
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: lre-broker-hdls-svc-5rr74
    namespace: lre-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: lre-broker-hdls-svc
      uid: 74391430-fa42-4059-b90b-6da798eb2bdf
    resourceVersion: "476054077"
    uid: 10a9c5db-f240-42b1-a6b8-63da3f39ca3c
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-25T13:37:40Z"
    generateName: lre-broker-ping-svc-
    generation: 1
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: lre-broker-ping-svc
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      service.kubernetes.io/headless: ""
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: lre-broker-ping-svc-7zvkw
    namespace: lre-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: lre-broker-ping-svc
      uid: ae49cf49-85d9-4573-b962-ee32485f52a3
    resourceVersion: "476054101"
    uid: ea0a9391-f798-4513-91a0-a5a2014285b1
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-25T13:37:40Z"
    generateName: lre-broker-wconsj-0-svc-
    generation: 1
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: lre-broker-wconsj-0-svc
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: lre-broker-wconsj-0-svc-rgr9b
    namespace: lre-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: lre-broker-wconsj-0-svc
      uid: 4d0de212-1131-49e1-9e8c-f9284300c430
    resourceVersion: "476054029"
    uid: 7be5509e-6810-4ed6-9a83-3608480fc6f7
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-25T13:37:40Z"
    generateName: lre-broker-wconsj-1-svc-
    generation: 1
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: lre-broker-wconsj-1-svc
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: lre-broker-wconsj-1-svc-bngjj
    namespace: lre-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: lre-broker-wconsj-1-svc
      uid: efe3880e-0d25-4b25-96de-315eb860ea9b
    resourceVersion: "476054056"
    uid: 3278e670-ac28-4f0b-9102-6af5bf3dc5fb
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-25T13:37:40Z"
    generateName: lre-design-
    generation: 1
    labels:
      app.kubernetes.io/component: lre-design
      app.kubernetes.io/instance: lre-design
      app.kubernetes.io/name: nodejs
      app.openshift.io/runtime: nodejs
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: lre-design
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      project: lre-design
      provider: nodeshift
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
      version: 0.1.0
    name: lre-design-nfh4r
    namespace: lre-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: lre-design
      uid: ba46362d-afc6-44cf-9e80-4b060d5f5682
    resourceVersion: "476054072"
    uid: 59f83afc-23a9-4103-bfc4-2dd4b13835eb
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.129.16.115
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth1-2s77x
    targetRef:
      kind: Pod
      name: lre-front-7-2thsq
      namespace: lre-dev
      resourceVersion: "472917997"
      uid: 44bab40b-530f-4135-9bbf-36ee85bed611
    zone: brazilsouth-1
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-25T13:37:40Z"
    generateName: lre-front-
    generation: 91
    labels:
      app: lre-front
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: lre-front
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: lre-front-qzn8q
    namespace: lre-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: lre-front
      uid: 9e5c7cff-89d9-4970-a082-ff1eb3094585
    resourceVersion: "472918002"
    uid: 533ef064-3413-40eb-b9c9-60457dfc0f0c
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-25T13:37:40Z"
    generateName: lre-frontproject-
    generation: 1
    labels:
      app.kubernetes.io/component: lre-frontproject
      app.kubernetes.io/instance: lre-frontproject
      app.kubernetes.io/name: nodejs
      app.openshift.io/runtime: nodejs
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: lre-frontproject
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      project: lre-frontproject
      provider: nodeshift
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
      version: 0.1.0
    name: lre-frontproject-6gjcn
    namespace: lre-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: lre-frontproject
      uid: 97e72a9d-aa7e-456a-b293-1e4a5d9b3e36
    resourceVersion: "476066965"
    uid: 065e89d7-9433-4f50-b51b-1c297ba6859f
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.16.108
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth2-rglbf
    targetRef:
      kind: Pod
      name: product-lre-1-78dll
      namespace: lre-dev
      resourceVersion: "467404301"
      uid: 60d491f1-a7db-43ee-bae2-7d07821f1c75
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-25T13:37:40Z"
    generateName: product-lre-
    generation: 44
    labels:
      app: product-lre
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: product-lre
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: product-lre-9tpvz
    namespace: lre-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: product-lre
      uid: 753dc588-a9dc-4a7b-848c-b4e1a41c4cc7
    resourceVersion: "467404303"
    uid: 694375d4-ba24-46e9-8399-4d3ca6a3ba24
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
