lre-dev/routes.route.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T17:09:53Z"
    labels:
      app: api-integracion
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: api-integracion
    namespace: lre-dev
    resourceVersion: "94786387"
    uid: 8617c60e-97d6-44bc-9824-d83183ed2be7
  spec:
    host: api-integracion-lre-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIGTDCCBTSgAwIBAgIQQM3LJhHVXiYnGmlDIgVocTANBgkqhkiG9w0BAQsFADCB
[...]
        ihyC8ZZmbrJ84MBzbv5uRxhbTH+Fc42JEnHFKMYxG8Q=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: api-integracion
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T17:09:53Z"
        status: "True"
        type: Admitted
      host: api-integracion-lre-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T17:06:26Z"
    labels:
      app: consumerampq
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: consumerampq
    namespace: lre-dev
    resourceVersion: "94783935"
    uid: 75c94733-320e-4793-8979-5fe18bae5342
  spec:
    host: consumerampq-lre-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIGTDCCBTSgAwIBAgIQQM3LJhHVXiYnGmlDIgVocTANBgkqhkiG9w0BAQsFADCB
[...]
        ihyC8ZZmbrJ84MBzbv5uRxhbTH+Fc42JEnHFKMYxG8Q=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: consumerampq
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T17:06:26Z"
        status: "True"
        type: Admitted
      host: consumerampq-lre-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T17:04:47Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: lre-broker-amqp-0-svc-rte
    namespace: lre-dev
    resourceVersion: "94792654"
    uid: 15caa965-561e-44bc-a2a1-65de1a4cf6ef
  spec:
    host: lre-broker-amqp-0-svc-rte-lre-dev.api-cloud.dirtrab.cl
    port:
      targetPort: amqp-0
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIGTDCCBTSgAwIBAgIQQM3LJhHVXiYnGmlDIgVocTANBgkqhkiG9w0BAQsFADCB
[...]
        ihyC8ZZmbrJ84MBzbv5uRxhbTH+Fc42JEnHFKMYxG8Q=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: lre-broker-amqp-0-svc
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T17:19:43Z"
        status: "True"
        type: Admitted
      host: lre-broker-amqp-0-svc-rte-lre-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T17:00:48Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: lre-broker-amqp-1-svc-rte
    namespace: lre-dev
    resourceVersion: "94780355"
    uid: f6f4add5-1c13-4384-84b0-8d5635256289
  spec:
    host: lre-broker-amqp-1-svc-rte-lre-dev.api-cloud.dirtrab.cl
    port:
      targetPort: amqp-1
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIGTDCCBTSgAwIBAgIQQM3LJhHVXiYnGmlDIgVocTANBgkqhkiG9w0BAQsFADCB
[...]
        ihyC8ZZmbrJ84MBzbv5uRxhbTH+Fc42JEnHFKMYxG8Q=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: lre-broker-amqp-1-svc
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T17:00:48Z"
        status: "True"
        type: Admitted
      host: lre-broker-amqp-1-svc-rte-lre-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T16:58:50Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: lre-broker-wconsj-0-svc-rte
    namespace: lre-dev
    resourceVersion: "94779125"
    uid: 7a1d8aeb-9059-4aa9-9517-664253ac03af
  spec:
    host: lre-broker-wconsj-0-svc-rte-lre-dev.api-cloud.dirtrab.cl
    port:
      targetPort: wconsj-0
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIGTDCCBTSgAwIBAgIQQM3LJhHVXiYnGmlDIgVocTANBgkqhkiG9w0BAQsFADCB
[...]
        ihyC8ZZmbrJ84MBzbv5uRxhbTH+Fc42JEnHFKMYxG8Q=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: lre-broker-wconsj-0-svc
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T16:58:50Z"
        status: "True"
        type: Admitted
      host: lre-broker-wconsj-0-svc-rte-lre-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T16:56:21Z"
    labels:
      ActiveMQArtemis: lre-broker
      application: lre-broker-app
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: lre-broker-wconsj-1-svc-rte
    namespace: lre-dev
    resourceVersion: "94777924"
    uid: 092d2cb6-d17c-402c-b128-02938f03ed06
  spec:
    host: lre-broker-wconsj-1-svc-rte-lre-dev.api-cloud.dirtrab.cl
    port:
      targetPort: wconsj-1
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIGTDCCBTSgAwIBAgIQQM3LJhHVXiYnGmlDIgVocTANBgkqhkiG9w0BAQsFADCB
[...]
        ihyC8ZZmbrJ84MBzbv5uRxhbTH+Fc42JEnHFKMYxG8Q=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: lre-broker-wconsj-1-svc
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T16:56:41Z"
        status: "True"
        type: Admitted
      host: lre-broker-wconsj-1-svc-rte-lre-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T16:52:04Z"
    labels:
      app: lre-front
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: lre-front
    namespace: lre-dev
    resourceVersion: "94775346"
    uid: 432330d5-9e44-4813-99bc-fd274fdacd0d
  spec:
    host: lre-front-lre-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 3000-tcp
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIGTDCCBTSgAwIBAgIQQM3LJhHVXiYnGmlDIgVocTANBgkqhkiG9w0BAQsFADCB
[...]
        ihyC8ZZmbrJ84MBzbv5uRxhbTH+Fc42JEnHFKMYxG8Q=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: lre-front
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T16:52:22Z"
        status: "True"
        type: Admitted
      host: lre-front-lre-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-08-30T16:25:11Z"
    labels:
      app: product-lre
      migration.openshift.io/migrated-by-migmigration: c3ea9ecb-e90b-490b-b3d5-a4a3ca470138
      migration.openshift.io/migrated-by-migplan: 09dc99a3-20c0-4d89-88a2-c81cce3ef81b
      velero.io/backup-name: migration-f9156-initial-ff7x9
      velero.io/restore-name: migration-f9156-final-jccsn
    name: product-lre
    namespace: lre-dev
    resourceVersion: "94758836"
    uid: f312c6e8-fa2a-455f-8efd-281fa8ba9308
  spec:
    host: product-lre-lre-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 3000-tcp
    tls:
      certificate: |-
        -----BEGIN CERTIFICATE-----
        MIIGTDCCBTSgAwIBAgIQQM3LJhHVXiYnGmlDIgVocTANBgkqhkiG9w0BAQsFADCB
[...]
        ihyC8ZZmbrJ84MBzbv5uRxhbTH+Fc42JEnHFKMYxG8Q=
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |-
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAqjxsFT81Fi/wC4xyY03glJAqGMUlOdKkzSi+Yi351+rLfpsW
[...]
        SmQiouDNzC1tIHffaYSaR1ohR+EFDixr6GNHuugNM++F/0iO3rKnMA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: product-lre
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-08-30T16:25:11Z"
        status: "True"
        type: Admitted
      host: product-lre-lre-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
